--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^17.1.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
